@startuml classes_domaine
!theme plain
title Diagramme de classes — Domaine Métier MicroRecouv\nVersion 1.0 — IMF Cameroun (CEMAC)

skinparam classAttributeIconSize 0
skinparam classBorderColor #2C7BE5
skinparam classHeaderBackgroundColor #EBF2FF
skinparam classFontSize 11
skinparam ArrowColor #2C7BE5
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 60

' ══════════════════════════════════════════════════════
' MULTI-TENANT
' ══════════════════════════════════════════════════════
class Imf {
    +code : String
    +nom : String
    +typeImf : {COOPERATIVE, MFI_CAT1, MFI_CAT2, MUTUELLE}
    +pays : String
    +actif : Boolean
}

class Agence {
    +codeAgence : String
    +nomAgence : String
    +ville : String
    +region : String
}

class User {
    +email : String
    +nomComplet : String
    +role : {SUPER_ADMIN, DIRECTEUR, CHEF_AGENCE,\nRESPONSABLE_RECOUVREMENT, ANALYSTE,\nANALYSTE_ENGAGEMENTS, DSI, AGENT,\nAGENT_CREDIT, AGENT_SAISIE, CAISSIER, SUPPORT}
    +actif : Boolean
}

' ══════════════════════════════════════════════════════
' CLIENTS
' ══════════════════════════════════════════════════════
class ClientInformel {
    +nomComplet : String
    +telephone : String
    +secteurActivite : String
    +dateAdhesion : Date
}

class KycDossier {
    +statut : {EN_ATTENTE, VALIDE, REJETE}
    +dateVerification : Date
    +niveauKyc : String
}

' ══════════════════════════════════════════════════════
' COLLECTES EPARGNE (mobile offline-first)
' ══════════════════════════════════════════════════════
class CycleCollecte {
    +nomCycle : String
    +periodicite : {QUOTIDIEN, HEBDOMADAIRE, MENSUEL}
    +objectifMontant : BigDecimal
}

class CollecteTerrain {
    +uuidMobile : UUID
    +montantCollecte : BigDecimal
    +dateCollecte : Date
    +canalPaiement : {ESPECES, MTN, ORANGE, WAVE}
    +statut : {SOUMISE, CONFIRMEE, DOUBLON, PENDING_SYNC}
    +latitude : BigDecimal
    +longitude : BigDecimal
}

' ══════════════════════════════════════════════════════
' CREDIT (cycle complet)
' ══════════════════════════════════════════════════════
class DossierCredit {
    +montantDemande : BigDecimal
    +dureeMois : Integer
    +objetFinancement : String
    +statut : {INSTRUCTION, EN_COMITE, APPROUVE,\nREJETE, AJOURNE, DEBLOQUE}
}

class ComiteDecision {
    +dateDeliberation : Date
    +decision : {APPROUVE, REJETE, AJOURNE}
    +motif : String
}

class ContratCredit {
    +referenceContrat : String
    +montantTotal : BigDecimal
    +tauxInteret : BigDecimal
    +nbEcheances : Integer
    +statut : {ACTIF, SOLDE, RESILIE}
}

class Echeance {
    +numeroEcheance : Integer
    +dateEcheance : Date
    +montantDu : BigDecimal
    +montantRembourse : BigDecimal
    +statut : {EN_ATTENTE, PAYEE, EN_RETARD}
}

class GarantieCredit {
    +typeGarantie : {HYPOTHEQUE, NANTISSEMENT, CAUTION}
    +valeurEstimee : BigDecimal
    +description : String
}

' ══════════════════════════════════════════════════════
' CREANCES & RECOUVREMENT
' ══════════════════════════════════════════════════════
class Creance {
    +montantTotal : BigDecimal
    +montantImpaye : BigDecimal
    +joursRetard : Integer
    +classeRisqueCobac : {A, B, C, D, E}
    +statut : {ACTIVE, EN_RECOUVREMENT,\nSOLDE, PERTE}
}

class AlerteImpaye {
    +typeAlerte : {RISQUE_DEFAUT_IMMINENT,\nDETERIORATION_RAPIDE,\nECHEANCE_IMMINENTE,\nIMPAYE_CONSTATE}
    +joursRetard : Integer
    +statutAlerte : {ACTIVE, ESCALADEE, CLOTUREE}
}

class PlanApurement {
    +montantAccorde : BigDecimal
    +nombreEcheances : Integer
    +statut : {EN_COURS, HONORE, ROMPU}
}

class DossierRecouvrement {
    +phase : {RELANCE_AMIABLE, MISE_EN_DEMEURE,\nCONTENTIEUX, ESCALADE}
    +prioriteScoring : BigDecimal
    +clos : Boolean
}

class ActionRecouvrement {
    +typeAction : {APPEL, SMS, VISITE,\nMISE_EN_DEMEURE, PROMESSE}
    +dateAction : Date
    +resultat : String
}

' ══════════════════════════════════════════════════════
' CAISSE
' ══════════════════════════════════════════════════════
class OperationCaisse {
    +typeOperation : {ENTREE, SORTIE, TRANSFERT}
    +montant : BigDecimal
    +dateOperation : Date
    +motif : String
}

' ══════════════════════════════════════════════════════
' SCORING ML
' ══════════════════════════════════════════════════════
class ClientScore <<ML>> {
    +scoreCrs : BigDecimal
    +scoreRps : BigDecimal
    +scoreCsi : BigDecimal
    +scoreMcrs : BigDecimal
    +classeRisque : {FAIBLE, MODERE, ELEVE, CRITIQUE}
    +actionRecommandee : String
    +scoredAt : Date
}

class ShapExplanation <<ML>> {
    +featureName : String
    +shapValue : BigDecimal
    +rangImportance : Integer
}

' ══════════════════════════════════════════════════════
' CHATBOT IA
' ══════════════════════════════════════════════════════
class ConversationIA <<IA>> {
    +sessionId : String
    +role : String
    +dateDebut : Date
}

class MessageIA <<IA>> {
    +contenu : String
    +expediteur : {USER, ASSISTANT}
    +timestamp : Date
    +tokensUtilises : Integer
}

' ══════════════════════════════════════════════════════
' SUPPORT & AUDIT
' ══════════════════════════════════════════════════════
class TicketSupport {
    +titre : String
    +categorie : {TECHNIQUE, FACTURATION, AUTRE}
    +priorite : {NORMALE, HAUTE, URGENTE}
    +statut : {OUVERT, EN_COURS, RESOLU}
}

class Notification {
    +type : String
    +titre : String
    +lu : Boolean
    +createdAt : Date
}

' ══════════════════════════════════════════════════════
' RELATIONS
' ══════════════════════════════════════════════════════

' Multi-tenant
Imf "1" *-- "1..*" Agence
Imf "1" *-- "1..*" User
Agence "1" o-- "0..*" User

' Clients
Imf "1" *-- "0..*" ClientInformel
ClientInformel "1" *-- "0..1" KycDossier

' Collectes
Agence "1" o-- "0..*" CycleCollecte
CycleCollecte "1" *-- "0..*" CollecteTerrain
User "1" o-- "0..*" CollecteTerrain : agent
ClientInformel "1" o-- "0..*" CollecteTerrain

' Crédit
ClientInformel "1" o-- "0..*" DossierCredit
User "1" o-- "0..*" DossierCredit : instruit
DossierCredit "1" *-- "0..1" ComiteDecision
DossierCredit "1" *-- "0..1" ContratCredit
ContratCredit "1" *-- "1..*" Echeance
ContratCredit "1" *-- "0..*" GarantieCredit
ContratCredit "1" *-- "0..1" Creance

' Recouvrement
Creance "1" *-- "0..*" AlerteImpaye
Creance "1" *-- "0..*" PlanApurement
Creance "1" o-- "0..1" DossierRecouvrement
DossierRecouvrement "1" *-- "0..*" ActionRecouvrement
User "1" o-- "0..*" DossierRecouvrement : responsable

' Caisse
User "1" o-- "0..*" OperationCaisse : caissier
Agence "1" o-- "0..*" OperationCaisse

' Scoring ML
ClientInformel "1" o-- "0..1" ClientScore
ClientScore "1" *-- "0..*" ShapExplanation
Creance ..> ClientScore : consulte

' Chatbot IA
User "1" o-- "0..*" ConversationIA
ConversationIA "1" *-- "1..*" MessageIA

' Support & Notifications
User "1" o-- "0..*" TicketSupport
User "1" o-- "0..*" Notification

@enduml
